# simplelib

./: CMakeLists.txt  LICENSE
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  simplelib.h
src/dog/: dog.cpp  dog.h  dog_p.h
